--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <div class="header__logo">
-      <img src="./assets/images/img/logo.png" alt="Лого">
+      <img class="logo" src="./assets/images/img/logo.png" alt="Лого">
     </div>
     <div class="header__button">
       <a class="button" href="#" target="_blank">
