--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <div class="header__logo">
-      <img src="./assets/images/img/logo.png" alt="Лого">
+      <img class="logo" src="./assets/images/img/logo.png" alt="Лого">
     </div>
     <div class="header__button">
       <a class="button" href="#" target="_blank">
@@ -57,7 +57,7 @@
         <h2 class="section__subtitle section__subtitle_white">новости</h2>
         <div class="section__form">
           <label for="contacts"></label>
-          <input type="email" id="contacts" placeholder="Эл.почта"/>
+          <input class="email" type="email" id="contacts" placeholder="Эл.почта">
         </div>
         <div class="section__button">
           <a class="button" href="#" target="_blank">
